[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
byteorder = "1.3"
net2 = "0.2"
dhcp = { path = "../dhcp", version="0.1" }
protocol = "3.2"
nix = { version = "0.25", features = ["net", "socket"]}
log = "0.4"
env_logger = "0.9"
